OPEN - task 7: Mecanismo de montagem do Registro 50 https://github.com/canalvpsasul/sintegra/issues/issue/7