@@ -4,7 +4,6 @@ import java.util.Date;
 
 import org.springframework.stereotype.Service;
 
-import br.com.canalvpsasul.sintegra.helper.ConversionUtils;
 import br.com.canalvpsasul.vpsabusiness.entities.administrativo.Empresa;
 import br.com.canalvpsasul.vpsabusiness.entities.operacional.Produto;
 import coffeepot.br.sintegra.registros.Registro74;
@@ -25,13 +24,19 @@ public class Registro74BusinessImpl implements Registro74Business {
 		registro74.setCnpjPossuidor("0"); 
 		registro74.setCodigoPosse(CodigoDePosse.PROPRIEDADE_INFORMANTE_POSSE_INFORMATANTE);
 		registro74.setCodigoProduto(produto.getVpsaId().toString());
-		registro74.setDataInventario(new Date()); // TODO SINTEGRA Registro 74 - Verificar como funciona a questão da data do inventário.
+		
+		// TODO SINTEGRA - Registro 74 - Solicitar a data do inventário na tela de filtros do sintegra.
+		registro74.setDataInventario(new Date()); 
 		registro74.setIePossuidor("");
-		registro74.setQuantidade(Double.valueOf(produto.getQuantidadeEmEstoque().toString()));		
+		
+		if(produto.getQuantidadeEmEstoque() < 0)
+			registro74.setQuantidade(new Double(0));
+		else
+			registro74.setQuantidade(new Double(produto.getQuantidadeEmEstoque()));
+		
 		registro74.setUfPossuidor(uf);
-		registro74.setValorTotalProduto(ConversionUtils.fromFloat(produto.getValorTotalEmEstoque()));		
+		registro74.setValorTotalProduto(new Double(produto.getValorTotalEmEstoque()));		
 		
 		return registro74;
 	}
-
 }
